Cleaning up some bugs I found on mobile

--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -30,6 +30,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   color: $color-primary;
   line-height: $line-height-gr;
+  word-break: break-word;
 }
 #app > div:first-of-type {
   min-height: 100vh;
@@ -38,6 +39,7 @@ body {
   flex-wrap: wrap;
 }
 main {
+  width: 100%;
   max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
@@ -227,14 +229,35 @@ ul {
 }
 
 .post-image {
-  max-width: 960px;
-  width: 95%;
-  margin: 1.5rem auto !important;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  margin: 1.5rem 0;
+  overflow-x: scroll;
+  max-width: 100%;
+
+  @media all and (max-width: $breakpoint-sm) {
+    justify-content: flex-start;
+  }
+
+  // If you don't want the image to scroll on mobile
+  &.constrain {
+    overflow-x: hidden;
+
+    img {
+      @media all and (max-width: $breakpoint-sm) {
+        min-width: 0;
+        max-width: 100%;
+      }
+    }
+  }
 
   img {
-    border-radius: 3px !important;
-    width: 100%;
+    display: block;
+    border-radius: 3px;
+
+    @media all and (max-width: $breakpoint-sm) {
+      min-width: 500px;
+    }
   }
 }
 
@@ -267,32 +290,52 @@ ul {
     }
   }
 
+  p,
+  li {
+    font-weight: 400;
+  }
+
   blockquote {
-    position: relative;
-    display: table;
-    margin: 0 auto;
-    padding: 20px 50px;
+    max-width: 75%;
+    display: flex;
+    margin: 1.5rem auto;
+    border-radius: 5px;
+    box-shadow: $box-shadow-sm;
+    border: 1px solid $border-light-gray;
+    padding: 1.5rem;
+    // background-color: lighten($border-lightest-gray, 1.5%);
+
+    @media all and (max-width: $breakpoint-sm) {
+      max-width: 100%;
+      padding: 1rem;
+    }
 
     p {
-      display: table-cell;
-      font-style: italic;
-      font-family: Georgia, "Times New Roman",Times,serif;
+      display: inline-block;
+      font-family: $font-tertiary;
+      font-weight: 500;
       line-height: 1.5em;
-      padding: 10px 0 10px 45px;
-      font-size: 22px;
+      padding: 0 0 0.125rem 0.625rem;
+      font-size: 1.375rem;
+      color: $black;
+      transform: translateY(-.5em);
+
+      @media all and (max-width: $breakpoint-sm) {
+        font-size: 1.125rem;
+        padding-left: 5px;
+      }
     }
 
     i {
-      position: absolute;
-      display: table-cell;
-      border: 0;
-      font-size: 16px;
-      margin-right: 14px;
-      line-height: 39px;
-      text-align: center;
-      color: $border-dark-gray;
       display: inline-block;
-      width: 47px;
+      font-size: 1.5rem;
+      text-align: center;
+      color: lighten($color-primary-med, 12%);
+      display: inline-block;
+
+      @media all and (max-width: $breakpoint-sm) {
+        font-size: 1rem;
+      }
     }
 
     cite {
